--- a/views/pages/authors-topics.ejs
+++ b/views/pages/authors-topics.ejs
@@ -29,7 +29,7 @@
                                         </div>
                                         <% if (typeof user !== 'undefined') { %>
                                             <div class="author-actions">
-                                                <a href="/authors/edit/<%= author.id %>" class="btn btn-sm btn-outline-primary">
+                                                <a href="/authors/edit/<%= author.id %>" class="btn btn-sm btn-secondary">
                                                     <i class="fas fa-edit"></i> Editar
                                                 </a>
                                             </div>
@@ -38,23 +38,8 @@
 
                                     <div class="quotes-container mt-3">
                                         <h6>Frases:</h6>
-                                        <%
-                                        // Debug: log author quotes data
-                                        console.log('Author:', author.name, 'Quotes:', author.quotes);
-
-                                        // Check if quotes is a string (JSON) and parse it
-                                        let quotes = author.quotes;
-                                        if (typeof quotes === 'string') {
-                                            try {
-                                                quotes = JSON.parse(quotes);
-                                            } catch (e) {
-                                                console.log('Error parsing quotes JSON:', e);
-                                                quotes = [];
-                                            }
-                                        }
-                                        %>
-                                        <% if (quotes && Array.isArray(quotes) && quotes.length > 0 && quotes[0] !== null) { %>
-                                            <% quotes.forEach(quote => { %>
+                                        <% if (author.quotes && author.quotes.length > 0) { %>
+                                            <% author.quotes.forEach(quote => { %>
                                                 <%- include('../partials/_simple_quote_card', { quote: quote }) %>
                                             <% }) %>
                                         <% } else { %>
@@ -89,7 +74,7 @@
                                         <h5 class="mb-2"><%= topic.name %></h5>
                                         <% if (typeof user !== 'undefined') { %>
                                             <div class="topic-actions">
-                                                <a href="/topics/edit/<%= topic.id %>" class="btn btn-sm btn-outline-primary">
+                                                <a href="/topics/edit/<%= topic.id %>" class="btn btn-sm btn-secondary">
                                                     <i class="fas fa-edit"></i> Editar
                                                 </a>
                                             </div>
@@ -97,23 +82,8 @@
                                     </div>
                                     <div class="quotes-container">
                                         <h6>Frases:</h6>
-                                        <%
-                                        // Debug: log topic quotes data
-                                        console.log('Topic:', topic.name, 'Quotes:', topic.quotes);
-
-                                        // Check if quotes is a string (JSON) and parse it
-                                        let quotes = topic.quotes;
-                                        if (typeof quotes === 'string') {
-                                            try {
-                                                quotes = JSON.parse(quotes);
-                                            } catch (e) {
-                                                console.log('Error parsing quotes JSON:', e);
-                                                quotes = [];
-                                            }
-                                        }
-                                        %>
-                                        <% if (quotes && Array.isArray(quotes) && quotes.length > 0 && quotes[0] !== null) { %>
-                                            <% quotes.forEach(quote => { %>
+                                        <% if (topic.quotes && topic.quotes.length > 0) { %>
+                                            <% topic.quotes.forEach(quote => { %>
                                                 <%- include('../partials/_simple_quote_card', { quote: quote }) %>
                                             <% }) %>
                                         <% } else { %>
@@ -131,4 +101,3 @@
         </div>
     </div>
 </div>
-
