--- a/views/components/header.ejs
+++ b/views/components/header.ejs
@@ -1,11 +1,11 @@
 <header>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <nav class="navbar navbar-expand-lg">
     <div class="container">
       <a class="navbar-brand" href="/">MyQuote</a>
 
       <!-- Mobile toggle button -->
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation" style="background-color: #8b4513 !important; border: 2px solid #8b4513 !important;">
+        <span class="navbar-toggler-icon" style="background-image: url('data:image/svg+xml,%3csvg xmlns=\'http://www.w3.org/2000/svg\' viewBox=\'0 0 30 30\'%3e%3cpath stroke=\'%23ffffff\' stroke-linecap=\'round\' stroke-miterlimit=\'10\' stroke-width=\'2.5\' d=\'m4 7h22M4 15h22M4 23h22\'/%3e%3c/svg%3e') !important;"></span>
       </button>
 
       <div class="collapse navbar-collapse" id="navbarNav">
@@ -17,7 +17,9 @@
         <ul class="navbar-nav">
         <% if (user) { %>
           <li class="nav-item">
-            <span class="nav-link">Olá, <%= user.username %></span>
+            <span class="nav-link user-indicator">
+              <%= user.username %>
+            </span>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/quotes/new">Nova Frase</a>
